# whitemagic

./: .env.example  .gitignore  ABOUT.md  AI_PRIMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  MANIFEST.in  Makefile  PRIVACY_POLICY.md  README.md  RELEASE_NOTES.md  SECURITY.md  SYSTEM_MAP.md  TERMS_OF_SERVICE.md  llms-full.txt  llms.txt  mcp-registry.json  pyproject.toml  server.json  skill.md
.github/workflows/: ci.yml  release.yml
.well-known/: agent.json
audit/: tool_smoke.py
docs/: CONTRIBUTING.md  MCP_CONFIG_EXAMPLES.md  MYPY_REMAINING.md  POLYGLOT_STATUS.md  QUICKSTART.md  README.md  STRATEGIC_ROADMAP.md  USE_CASES.md  V14_UNIFIED_STRATEGY.md
docs/guides/: ENCRYPTION_AT_REST.md  GALAXY_PER_CLIENT_GUIDE.md  MCP_CONFIG_EXAMPLES.md  QUICKSTART.md
docs/reference/: API_REFERENCE.md  ARCHITECTURE.md
elixir/: mix.exs
eval/: run_eval.py
examples/: agent_minimal.py
haskell/: haskell_bridge.py  whitemagic-divination.cabal
haskell/src/: FFI.hs
infrastructure/: README.md
infrastructure/devops/: ollama-integration.sh  redis-async-ai.py
infrastructure/monitoring/: workflow_dashboard.py
infrastructure/optimization/: supershell.sh
mesh/: federation.go  go.mod  go.sum  main.go
nexus/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
nexus/src/: App.tsx  index.css
nexus/src-tauri/: Cargo.toml  tauri.conf.json
nexus/src-tauri/src/: main.rs
scripts/: benchmark_gauntlet.py  benchmark_mcp.py  benchmark_polyglot.py  db_cleanup_v13_3_2.py  dream_overnight.py  generate_llms_txt.py  ingest_archives.py  memory_renaissance.py  merge_databases.py  rehydrate_galaxy.py  run_activation_sequence.py  seed_quickstart_memories.py  sync_to_public.sh  verify_install.py  version_bump.py
scripts/maintenance/: audit_mcp.py  extract_timeline.py  generate_reports_fixed.py  import_memories.py  ingest_history.py  patch_timestamps.py  reconstruct_galaxy.py  recover_elixir.py  tag_memories.py  verify_legacy_systems.py  verify_paths_new.py
scripts/verification/: check_skip_policy.py  verify_all.py  verify_decouple.py  verify_eastern_isolated.py  verify_integration.py  verify_northern_isolated.py  verify_phase2.py  verify_rust_bridge.py  verify_southern_isolated.py
sdk/typescript/: README.md  package.json
tests/: benchmark_mojo.py  conftest.py  test_integration_round2.py  test_new_tools.py
tests/benchmarks/: hyper_benchmark.py
tests/integration/: smoke_test_polyglot.py  test_bridge_integration.py  test_dream_cycle_e2e.py  test_leap3_integration.py  test_mcp_e2e.py  test_rust_acceleration.py  test_tool_contract_full.py  verify_zig_mojo.py
tests/legacy/: test_bridge.py  verify_memory.py  verify_memory_v2.py
tests/unit/: test_boundary_engine.py  test_cold_storage_embeddings.py  test_config_paths.py  test_constellation_recall.py  test_core_intelligence_wiring.py  test_cyberbrain_modules.py  test_dispatcher.py  test_entropy_scorer.py  test_envelope.py  test_event_ring_bridge.py  test_galactic_improvements.py  test_galactic_map.py  test_handlers_batch1.py  test_handlers_batch2.py  test_handlers_batch3.py  test_idempotency.py  test_living_memory_v2.py  test_mandala_subsystems.py  test_memory_ops.py  test_nurturing_engine.py  test_polyglot_bridges.py  test_prat_resonance.py  test_prat_router.py  test_round5_features.py  test_rust_bridge.py  test_scratchpad.py  test_semantic_memory.py  test_synthesis_gap_closures.py  test_synthesis_gaps.py  test_tool_consolidation.py  test_tools_copy_integration.py  test_umap_projection.py  test_v11_3_modules.py  test_v12_7_fusions.py  test_v14_2_features.py  test_v14_3_features.py  test_v14_improvements.py  test_violet_security.py  test_zodiac.py
tests/verify/: test_sangha_coordination.py  test_solver_convergence.py
whitemagic/: __init__.py  logging_config.py  mcp_api_bridge.py  rosetta.py  run_mcp.py  run_mcp_lean.py
whitemagic-go/: go.mod
whitemagic-mojo/: orchestra.py
whitemagic-mojo/archive/: benchmark_simple_v2.mojo
whitemagic-mojo/src/: batch_encoder.mojo  coordinate_encoder.mojo
whitemagic-rust/: Cargo.toml  build.rs  pyproject.toml
whitemagic-rust/src/: arrow_bridge.rs  consolidation.rs  embeddings.rs  event_bus.rs  event_ring.rs  galactic_accelerator.rs  holographic_encoder_5d.rs  ipc_bridge.rs  keyword_extract.rs  lib.rs  minhash.rs  search.rs  shared_state.rs  sqlite_accel.rs  state_board.rs  tokio_clones.rs  wasm.rs  zig_ffi.rs
whitemagic-zig/src/: dispatch_core.zig  main.zig
whitemagic/agents/: doctrine.py  worker_daemon.py
whitemagic/ai/: __init__.py  context_optimizer.py
whitemagic/archaeology/: __init__.py  dig.py
whitemagic/automation/: daemon.py
whitemagic/autonomous/: __init__.py  diary.py
whitemagic/benchmarks/: __init__.py
whitemagic/cache/: redis.py
whitemagic/cascade/: __init__.py  adaptive_portal.py
whitemagic/cli/: __init__.py  cli_app.py  cli_autonomous_execution.py  cli_commands_gardens.py  cli_commands_intelligence.py  cli_commands_symbolic.py  cli_prat.py  cli_rust.py  init_command.py
whitemagic/config/: __init__.py  config.py  manager.py  paths.py
whitemagic/continuity/: grounding.py
whitemagic/core/: continuity.py  embodiment.py  governor.py  health_monitor.py  semantic_fs.py  update_checker.py  user.py
whitemagic/db/: optimizer.py
whitemagic/dharma/: __init__.py  karma_anchor.py  karma_ledger.py  rules.py
whitemagic/docs/: __init__.py  interactive.py
whitemagic/edge/: __init__.py  inference.py  patterns.py  thought_clones_async.py
whitemagic/gardens/: __init__.py
whitemagic/gratitude/: ledger.py  proof.py
whitemagic/grimoire/: 00_INDEX.md  MOLTBOOK_SEED.md  README.md  auto_cast.py  chapters.py  core.py  spells.py
whitemagic/harmony/: anomaly_detector.py  homeostatic_loop.py  vector.py  yin_yang_tracker.py
whitemagic/inference/: bitnet_bridge.py
whitemagic/maintenance/: __init__.py
whitemagic/marketplace/: bridge.py
whitemagic/mesh/: awareness.py
whitemagic/metrics/: __init__.py
whitemagic/oms/: manager.py
whitemagic/optimization/: polyglot_router.py  predictive_cache.py  rust_accelerators.py
(+279 files in other folders)
