[package]
name = "whitemagic"
version = "14.3.1"
edition = "2021"
authors = ["WhiteMagic Contributors"]
description = "High-performance Rust core for WhiteMagic memory management"
license = "MIT"

[lib]
name = "whitemagic_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
rayon = "1.8"  # Parallel processing
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization
flate2 = "1.0"  # Fast compression (using zlib/gzip instead of lz4)
memmap2 = "0.9"  # Memory-mapped files
regex = "1.10"  # Pattern matching for data lake
aho-corasick = "1.1" # Fast multi-pattern search
walkdir = "2.4"  # Directory traversal
dashmap = "5.5"  # Concurrent hashmap
crossbeam = "0.8"  # Lock-free data structures
lazy_static = "1.4"
ndarray = "0.15"  # N-dimensional arrays for coordinate vectors
kdtree = "0.7"    # Stable K-D Tree implementation
rusqlite = { version = "0.31", features = ["bundled"], optional = true }  # SQLite accelerator
rand = "0.8"      # Random number generation for synthesis
getrandom = { version = "0.2", optional = true }
sha2 = "0.10"     # Hashing for signatures
hex = "0.4"      # Hex encoding for signatures

[features]
default = ["python"]
python = ["pyo3", "tokio", "rusqlite"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/js"]

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

# [[bench]]
# name = "consolidation"
# harness = false

# Workspace configuration for rust-analyzer
[workspace]
resolver = "2"
