[package]
name = "whitemagic"
version = "15.0.0"
edition = "2021"
authors = ["WhiteMagic Contributors"]
description = "High-performance Rust core for WhiteMagic memory management"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "whitemagic_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wm-seed"
path = "src/bin/wm_seed.rs"
required-features = ["seed"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
# Minimal universal dependencies (WASM-safe)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# These are used by native modules but NOT by the WASM module
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
lazy_static = { version = "1.4", optional = true }
getrandom = { version = "0.2", optional = true }

# Native-only dependencies (do NOT compile for wasm32)
libc = { version = "0.2", optional = true }
rayon = { version = "1.8", optional = true }
sysinfo = { version = "0.30", optional = true }
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }
memmap2 = { version = "0.9", optional = true }
regex = { version = "1.10", optional = true }
aho-corasick = { version = "1.1", optional = true }
walkdir = { version = "2.4", optional = true }
dashmap = { version = "5.5", optional = true }
crossbeam = { version = "0.8", optional = true }
ndarray = { version = "0.15", optional = true }
kdtree = { version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
arrow = { version = "53", optional = true }
arrow-ipc = { version = "54", optional = true }
iceoryx2 = { version = "0.4", optional = true }

[features]
default = ["python"]
# Native deps bundle — everything needed for the full Python extension
native-deps = [
    "uuid", "chrono", "lazy_static",
    "libc", "rayon", "sysinfo", "bincode", "flate2", "memmap2",
    "regex", "aho-corasick", "walkdir", "dashmap", "crossbeam",
    "ndarray", "kdtree", "rand", "sha2", "hex",
]
python = ["pyo3", "tokio", "rusqlite", "arrow", "arrow-ipc", "native-deps"]
ipc = ["iceoryx2"]  # Requires libclang-dev: apt install libclang-dev
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/js"]
seed = ["rusqlite", "uuid", "chrono", "sha2", "hex", "rand"]

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

# [[bench]]
# name = "consolidation"
# harness = false

# Workspace configuration for rust-analyzer
[workspace]
resolver = "2"
